backups/azure_backup_20260110_145658/kubernetes/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      meta.helm.sh/release-name: cloudsound
      meta.helm.sh/release-namespace: cloudsound
      nginx.ingress.kubernetes.io/proxy-body-size: 50m
    creationTimestamp: "2026-01-09T16:11:04Z"
    generation: 2
    labels:
      app.kubernetes.io/instance: cloudsound
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: cloudsound
      app.kubernetes.io/version: 1.0.0
      helm.sh/chart: cloudsound-1.0.0
    name: cloudsound-api-gateway
    namespace: cloudsound
    resourceVersion: "42705"
    uid: d5843f81-0a43-4a35-9453-8492881ae34e
  spec:
    ingressClassName: nginx
    rules:
    - host: api.cloudsound.local
      http:
        paths:
        - backend:
            service:
              name: cloudsound-api-gateway
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 9.235.118.168
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      meta.helm.sh/release-name: cloudsound
      meta.helm.sh/release-namespace: cloudsound
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    creationTimestamp: "2026-01-09T16:11:04Z"
    generation: 3
    labels:
      app.kubernetes.io/instance: cloudsound
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: cloudsound
      app.kubernetes.io/version: 1.0.0
      helm.sh/chart: cloudsound-1.0.0
    name: cloudsound-frontend
    namespace: cloudsound
    resourceVersion: "44312"
    uid: 8486c888-f7ac-424a-b924-53600fd9a098
  spec:
    ingressClassName: nginx
    rules:
    - host: cloudsound.local
      http:
        paths:
        - backend:
            service:
              name: cloudsound-frontend
              port:
                number: 80
          path: /
          pathType: Prefix
    - http:
        paths:
        - backend:
            service:
              name: cloudsound-frontend
              port:
                number: 80
          path: /
          pathType: Prefix
    - http:
        paths:
        - backend:
            service:
              name: cloudsound-frontend
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - cloudsound.local
      secretName: cloudsound-frontend-tls
  status:
    loadBalancer:
      ingress:
      - ip: 9.235.118.168
kind: List
metadata:
  resourceVersion: ""
